[tool.poetry]
name = "reddit-parser"
version = "0.1.0"
description = ""
authors = ["EKA <eka@limantis.com>"]
readme = "README.md"
packages = [{include = "reddit_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests-async = "^0.6.2"
http3 = "^0.6.7"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
